<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mainapp_mainmenu_level2_title">My Nanodegree Apps</string>
    <string name="main_btn_spotify_streamer">Spotify Streamer</string>
    <string name="main_btn_scores_app">Scores App</string>
    <string name="main_btn_library_app">Library App</string>
    <string name="main_btn_bib_app">Build it bigger</string>
    <string name="main_btn_xyz_app">XYZ Reader</string>
    <string name="main_btn_capstone_app">Capstone: My Own App </string>
</resources>
