<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/mainapp_mainmenu_level2_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="34sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:singleLine="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_spotify_streamer"
        android:id="@+id/button4"
        android:textSize="20dp"
        android:background="#F08C35"
        android:singleLine="true"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:minWidth="250dp"
        android:minHeight="60dp"
        android:onClick="sendMessage"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_scores_app"
        android:id="@+id/button5"
        android:textSize="20dp"
        android:background="#F08C35"
        android:singleLine="true"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:minWidth="250dp"
        android:minHeight="60dp"
        android:onClick="sendMessage"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_library_app"
        android:id="@+id/button6"
        android:textSize="20dp"
        android:background="#F08C35"
        android:singleLine="true"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:minWidth="250dp"
        android:minHeight="60dp"
        android:onClick="sendMessage"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_bib_app"
        android:id="@+id/button7"
        android:textSize="20dp"
        android:background="#F08C35"
        android:singleLine="true"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:minWidth="250dp"
        android:minHeight="60dp"
        android:onClick="sendMessage"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_xyz_app"
        android:id="@+id/button8"
        android:textSize="20dp"
        android:background="#F08C35"
        android:singleLine="true"
        android:layout_below="@+id/button7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:minWidth="250dp"
        android:minHeight="60dp"
        android:onClick="sendMessage"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_capstone_app"
        android:id="@+id/button9"
        android:textSize="20dp"
        android:background="#E53935"
        android:singleLine="true"
        android:layout_below="@+id/button8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:minWidth="250dp"
        android:minHeight="60dp"
        android:onClick="sendMessage"
        />
</RelativeLayout>
